Refactoring to avoid session_overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -164,7 +164,7 @@ border-left: 10px solid #040;
 }
 
 h4 {
-margin: 0 0 12px 22px;
+margin: 5px 0 12px 22px;
 padding: 2px 4px;
 font-size: 14px;
 border-left: 6px solid #b00;
