--- a/app/assets/stylesheets/positions.css.scss
+++ b/app/assets/stylesheets/positions.css.scss
@@ -38,10 +38,12 @@ div.level3 {
 div.level4 {
 	padding-left: 35px;
 	padding-right: 10px;
+  padding-top: 0;
 }
 div.level5 {
 	padding-left: 45px;
 	padding-right: 10px;
+  padding-top: 0;
 }
 div.notify {
 	margin: 20px 80px;
